# vlm-eval-mini

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: sample_eval.json
examples/: mock_predictions.json
scripts/: evaluate.py
src/vlm_eval_mini/: __init__.py  metrics.py  runner.py
tests/: test_metrics.py
