[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-eval-mini"
version = "0.1.0"
description = "Lightweight evaluator for multimodal QA outputs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "June Monroe"}]
license = {text = "MIT"}
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
